Use ProcessBuilder to run python script